oops..missed a redudant code-piece.
git-svn-id: https://svn.apache.org/repos/asf/incubator/synapse/trunk/java@358786 13f79535-47bb-0310-9956-ffa450edef68